test/bad/edecl-in.c
/* Empty declaration should cause a parse error */
int x;;
